# python-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties  taskfile.yml  test.py
.claude/: settings.local.json
.github/workflows/: ci.yml
dev/: env.dev.local  env.local
docs/: auth.md
mecapy/: __init__.py  auth.py  client.py  config.py  exceptions.py  packages.py  workflows.py
mecapy/testing/: __init__.py  json_runner.py
mecapy_sdk/: __init__.py  __version__.py  auth.py  client.py  config.py  exceptions.py  models.py
tests/: README_auth_testing.md  __init__.py  conftest.py  test_auth.py  test_auth_only.py  test_client.py  test_config.py  test_exceptions.py  test_interactive_auth.py  test_models.py  test_packages.py  test_workflows.py
tests/test_production/: test_endpoints.py
