[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mecapy-sdk"
dynamic = ["version"]
description = "Python SDK for MecaPy API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jocelyn LOPEZ", email = "jocelyn.lopez@mecapy.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "keyring>=24.0.0",
    "authlib>=1.6.4",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/mecapy/python-sdk"
Repository = "https://github.com/mecapy/python-sdk"
Issues = "https://github.com/mecapy/python-sdk/issues"
Documentation = "https://mecapy.github.io/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["mecapy_sdk"]

[tool.hatch.version]
path = "mecapy_sdk/__version__.py"

# =============================================================================
#                                   PyTest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --cov=mecapy_sdk --cov-report=xml --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "auth: Authentication related tests",
    "production: Tests to run against production environment",
]

# =============================================================================
#                                   Coverage
# =============================================================================
[tool.coverage.run]
source = ["mecapy_sdk"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage_html"

# =============================================================================
#                                   Ruff
# =============================================================================
line-length = 120
indent-width = 4
target-version = "py313"

[format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[lint]
select = [
    "E", # Erreurs
    "W", # Warnings (avertissements)
    "F", # Fonctionnalité
    "I", # Isort
    "C", # Complexité
    "B", # Bugs
    "D", # Docstrings
    "R", # Refactoring
    "UP", # Pyupgrade
    "TRY", # Prevent Exception Handling AntiPatterns
    "C4", # flake8-comprehensions
    "DTZ",  # ban the usage of unsafe naive datetime class

    #    "FAST", # FastAPI specific
    "NPY", # Numpy specific
    "PD", # Panda
]

[lint.pydocstyle]
convention = "numpy"

[lint.mccabe]
max-complexity = 5

# =============================================================================
#                                   MyPy
# =============================================================================
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

